<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:scaleType="centerInside"
    tools:context=".NewAccountActivity">

    <TextView
        android:id="@+id/account_handle_label"
        style="@style/yambaPrefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/account_handle"/>

    <EditText
        android:id="@+id/account_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_handle_label"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/account_handle_example">

        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/account_password_label"
        style="@style/yambaPrefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_handle"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/account_password"/>

    <EditText
        android:id="@+id/account_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_password_label"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/account_password_example"/>

    <TextView
        android:id="@+id/account_endpoint_label"
        style="@style/yambaPrefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_password"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/account_endpoint"/>

    <EditText
        android:id="@+id/account_endpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_endpoint_label"
        android:layout_alignParentLeft="@id/account_endpoint_label"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/account_endpoint_example"/>

    <Button
        android:id="@+id/account_submit"
        style="@style/yambaText.button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/account_submit"/>

</RelativeLayout>
